--- a/client/src/pages/assets/style.css
+++ b/client/src/pages/assets/style.css
@@ -4,7 +4,12 @@ form {
   text-align: center;
 }
 
-form {
+/* form {
   justify-content: center;
+  width: 25%;
+} */
+
+input {
   width: 25% !important;
+  margin: auto;
 }
