--- a/client/src/pages/Profile/Profile.css
+++ b/client/src/pages/Profile/Profile.css
@@ -4,6 +4,10 @@ form {
   text-align: center;
 }
 
+h1 {
+  color: white;
+}
+
 input {
   width: 25% !important;
   margin: auto;
@@ -15,4 +19,23 @@ input {
   border-style: solid;
   width: 80%;
   margin: auto;
+}
+
+body {
+  background-repeat: no-repeat;
+	background: linear-gradient(-45deg, rgb(18,24,34), rgb(26,37,51), rgb(40, 41, 51), rgb(185,191,197));
+	background-size: 500% 500%;
+	animation: gradient 15s ease infinite;
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
 }
