--- a/client/src/pages/Profile/Profile.css
+++ b/client/src/pages/Profile/Profile.css
@@ -4,10 +4,6 @@ form {
   text-align: center;
 }
 
-h1 {
-  color: white;
-}
-
 input {
   width: 25% !important;
   margin: auto;
@@ -15,17 +11,20 @@ input {
 
 .profile-info {
   text-align: center;
-  border-color: black;
+  border-color: white;
   border-style: solid;
   width: 80%;
   margin: auto;
+  background-color: white;
+  color: black !important;
 }
 
 body {
   background-repeat: no-repeat;
 	background: linear-gradient(-45deg, rgb(18,24,34), rgb(26,37,51), rgb(40, 41, 51), rgb(185,191,197));
 	background-size: 500% 500%;
-	animation: gradient 15s ease infinite;
+  animation: gradient 15s ease infinite;
+  color: white;
 }
 
 @keyframes gradient {
