changed the look of the edit page

--- a/client/src/pages/Profile/Profile.css
+++ b/client/src/pages/Profile/Profile.css
@@ -4,10 +4,10 @@ form {
   text-align: center;
 }
 
-input {
+/* input {
   width: 25% !important;
   margin: auto;
-}
+} */
 
 .container {
   text-align: center;
