--- a/client/src/pages/Edit/Edit.css
+++ b/client/src/pages/Edit/Edit.css
@@ -2,7 +2,12 @@
   text-align: left;
 }
 
-.profile-input-form {
+.edit-inputs{
+  float: right;
+  width: 90%;
+}
+
+.edit-input{
   width: 90% !important;
 }
 
