--- a/client/src/pages/assets/main.css
+++ b/client/src/pages/assets/main.css
@@ -50,8 +50,7 @@ body {
     float: left;
   }
 
-/* h1,
-button,
-form {
-  text-align: center;
-} */
+h1, h2, h3, h5, h6, p, nav, .nav-link, .button, .descriptions{
+    /* font-family: 'Merienda One', cursive; */
+    font-family: 'Courgette', cursive;
+}
