--- a/client/src/pages/assets/main.css
+++ b/client/src/pages/assets/main.css
@@ -1,27 +1,8 @@
 body {
     background-repeat: no-repeat;
-    background: linear-gradient(
-      -45deg,
-      rgb(18, 24, 34),
-      rgb(26, 37, 51),
-      rgb(40, 41, 51),
-      rgb(185, 191, 197)
-    );
+    background-color: rgb(18, 24, 34, .0);
     background-size: 500% 900%;
-    animation: gradient 15s ease infinite;
     color: white;
-  }
-  
-  @keyframes gradient {
-    0% {
-      background-position: 0% 50%;
-    }
-    50% {
-      background-position: 100% 50%;
-    }
-    100% {
-      background-position: 0% 50%;
-    }
   }
 
   label {
