scroll fixed! and some other css styling

--- a/client/src/pages/assets/main.css
+++ b/client/src/pages/assets/main.css
@@ -16,6 +16,11 @@ body {
     border-color: lightgray;
     /* float: right; */
 }
+.button:hover{
+  background-color: lightgray;
+  color: white;
+  border-color: lightgray;
+}
 
 .cover-container {
     text-align: center;
