--- a/client/src/Background.css
+++ b/client/src/Background.css
@@ -1,7 +1,7 @@
 html {
-    height: 100%;
+    height: 500%;
     background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
-    overflow: hidden;
+    /* overflow: hidden; */
   }
   
   #stars {
