--- a/client/src/pages/Profile/Profile.css
+++ b/client/src/pages/Profile/Profile.css
@@ -14,12 +14,6 @@
     text-align: center;
 }
 
-.edit-btn:hover{
-  background-color: lightgray;
-  color: white;
-  border-color: lightgray;
-}
-
 #edit-btn{
 align-content: center;
 }
@@ -31,4 +25,10 @@ align-content: center;
 #sign-out-btn{
 align-content: center;
 width: 25%;
+}
+
+@media only screen and (max-width: 768px) {
+.profile-btn{
+  font-size: 15px;
+}
 }
