--- a/client/src/pages/Edit/Edit.css
+++ b/client/src/pages/Edit/Edit.css
@@ -18,3 +18,9 @@
   text-align: center;
   align-content: center;
 }
+
+@media only screen and (max-width: 768px) {
+.edit-btn{
+  font-size: 13px;
+}
+}
