--- a/client/src/pages/Profile/Profile.css
+++ b/client/src/pages/Profile/Profile.css
@@ -5,6 +5,7 @@
 
 .filled-in {
   float: right;
+  color: white;
 }
 
 .profile-btn {
@@ -29,6 +30,23 @@ width: 25%;
 
 @media only screen and (max-width: 768px) {
 .profile-btn{
-  font-size: 15px;
+  font-size: 13px;
+}
+}
+@media only screen and (max-width: 375px) {
+.heading{
+  font-size: 30px;
+}
+h4{
+  font-size: 18px;
+}
+.profile-btn{
+  width: 40%;
+  font-size: 13px;
+}
+
+#sign-out-btn{
+align-content: center;
+width: 40%;
 }
 }
