final revision of mobile and styling

--- a/client/src/pages/About/About.css
+++ b/client/src/pages/About/About.css
@@ -4,10 +4,12 @@ border-style: solid;
 width: 80%;
 margin: auto;
 padding: 30px;
+text-align: center;
 }
 
 #about-title{
     text-align: center;
+    padding: 30px;
 }
 
 @media only screen and (max-width: 375px) {
