--- a/client/src/pages/Edit/Edit.css
+++ b/client/src/pages/Edit/Edit.css
@@ -1,5 +1,5 @@
 .content-pad{
-  padding:40px
+  padding:40px;
 }
 
 .edit-profile {
@@ -20,11 +20,19 @@
   height: 50px;
   font-size: 20px;
   text-align: center;
-  align-content: center;
 }
 
+.link-btn{
+  padding: 10px;
+}
+
+
 @media only screen and (max-width: 768px) {
+.cover-container{
+  width: 95%;
+}
 .edit-btn{
   font-size: 13px;
+  width: 85%;
 }
 }
