added link on signup page to Hotlines alternate page.  Hotlines alternate page has an alternate navbar with no navigation, only a link back to the signup page when you click Positive Thoughts in the upper left.  Added some css to SignIn.css to try and match existing button style.  Added new route for Hotlines-Help for the alternate Hotlines page.

--- a/client/src/pages/SignIn/SignIn.css
+++ b/client/src/pages/SignIn/SignIn.css
@@ -22,6 +22,16 @@
   padding: 30px;
 }
 
+#hotlinebutton{
+  text-align: center;
+  margin: auto;
+}
+
+#hotlinelink{
+  width: 15%;
+  margin: auto;
+}
+
 @media only screen and (max-width: 375px){
   .sign-in-container{
     font-size: 30px;
