--- a/client/src/pages/Profile/Profile.css
+++ b/client/src/pages/Profile/Profile.css
@@ -36,6 +36,9 @@
   .profile-btn {
     font-size: 13px;
   }
+  #profilecontainer{
+    width: 100%;
+  }
 }
 @media only screen and (max-width: 375px) {
   .heading {
