--- a/client/src/pages/Profile/Profile.css
+++ b/client/src/pages/Profile/Profile.css
@@ -32,6 +32,10 @@
   width: 25%;
 }
 
+h3 {
+  color: white;
+}
+
 @media only screen and (max-width: 768px) {
   .profile-btn {
     font-size: 13px;
