--- a/client/src/pages/Prompts/Prompts.css
+++ b/client/src/pages/Prompts/Prompts.css
@@ -6,6 +6,10 @@
     padding: 30px;
 }
 
+label {
+    margin-left: 10%;
+}
+
 #prompt-list{
         text-align: center;
         background-color: rgba(255, 255, 255, 0.0001);
